# tezos-dissector

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  get_sources.rs  install-3.2-linux.sh  install-3.2-macos.sh  install-3.2.sh  install.rs  rustfmt.sh  setcap.sh
.cargo/: config
data/: README.md  identity.json
doc/: prepare_prebuilt.md
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: simulate_encrypted.rs  simulate_foreign.rs  simulate_handshake.rs
prebuilt/: Cargo.toml  install-prebuilt.sh  libtezos_dissector_macos_3_2.dylib  plugin-builder.ubuntu-20.04.dockerfile  wpb.ubuntu-19.10.dockerfile  wpb.ubuntu-20.04.dockerfile
prebuilt/src/: main.rs
src/: context.rs  conversation.rs  core.rs  dissector.rs  glue.rs  identity.rs  lib.rs  plugin.rs  proof_of_work.rs  range_tool.rs  wireshark.rs
src/conversation/: addresses.rs  buffering_result.rs  chunk_buffer.rs  chunk_info.rs  connection_message.rs  context.rs  conversation.rs  direct_buffer.rs  handshake.rs  mod.rs  overall_buffer.rs
src/ffi/: ftypes.rs  mod.rs  packet.rs  proto.rs
src/message/: mod.rs
src/network/: connection_message.rs  mod.rs  msg_decoder.rs  raw_packet_msg.rs
src/value/: buffer.rs  chunked_data.rs  fields.rs  message.rs  mod.rs  named.rs
tests/: basic_connection_message.sh  ensure_all_decrypted.sh
tezos-conversation/: Cargo.toml
tezos-conversation/src/: identity.rs  lib.rs  proof_of_work.rs  simulator.rs
tezos-conversation/src/conversation/: addresses.rs  chunk_info.rs  context.rs  context_wrapper.rs  direct_buffer.rs  mod.rs  overall_buffer.rs
tezos-conversation/src/value/: chunked_data.rs  fields.rs  message.rs  mod.rs  named.rs
wireshark-definitions/: Cargo.toml
wireshark-definitions/src/: lib.rs
wireshark-epan-adapter/: Cargo.toml  build.rs  ws_version.h
wireshark-epan-adapter/examples/: tree.rs
wireshark-epan-adapter/src/: lib.rs  plugin.rs  sys.rs
wireshark-epan-adapter/src/dissector/: helper.rs  info.rs  mod.rs  packet.rs  packet_info.rs  tree.rs
