[workspace]
members = [
    "wireshark-epan-adapter",
    "prebuilt",
    ".",
]

[package]
name = "tezos-dissector"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@simplestaking.com>"]
edition = "2018"
build = "build.rs"

[lib]
name = "tezos_dissector"
path = "src/lib.rs"
crate-type = ["cdylib"]

[build-dependencies]
cmake = "0.1"

[dependencies]
wireshark-epan-adapter = { path = "wireshark-epan-adapter" }
log = "0.4"
simple-logging = "2.0"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "0.5"
failure = "0.1"
num-bigint = "0.3"
chrono = "0.4"
bit-vec = "0.6"

crypto = { version = "0.2", git = "https://github.com/simplestaking/tezedge" }
tezos_messages = { version = "0.2", git = "https://github.com/simplestaking/tezedge" }
tezos_encoding = { version = "0.2", git = "https://github.com/simplestaking/tezedge" }
