[workspace]
members = [
    "wireshark-epan-adapter",
    "wireshark-definitions",
    "prebuilt",
    "tezos-conversation",
    "fuzz",
    ".",
]

[package]
name = "tezos-dissector"
version = "1.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@simplestaking.com>"]
license = "MIT"
edition = "2018"
build = "build.rs"

[lib]
name = "tezos_dissector"
path = "src/lib.rs"
crate-type = ["cdylib"]

[build-dependencies]
cmake = "0.1"

[dependencies]
wireshark-definitions = { path = "wireshark-definitions" }
wireshark-epan-adapter = { path = "wireshark-epan-adapter" }
tezos-conversation = { path = "tezos-conversation" }
log = "0.4"
simple-logging = "2.0"

crypto = { tag = "v0.4.0", git = "https://github.com/simplestaking/tezedge" }
tezos_encoding = { tag = "v0.4.0", git = "https://github.com/simplestaking/tezedge" }
tezos_messages = { tag = "v0.4.0", git = "https://github.com/simplestaking/tezedge" }
