[package]
name = "tezos-conversation"
version = "1.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@simplestaking.com>"]
license = "MIT"
edition = "2018"

[dependencies]
wireshark-definitions = { path = "../wireshark-definitions" }
log = "0.4"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "0.5"
failure = "0.1"
num-bigint = "0.3"
chrono = "0.4"
bit-vec = "0.6"

crypto = { tag = "v0.5.0", git = "https://github.com/simplestaking/tezedge" }
tezos_encoding = { tag = "v0.5.0", git = "https://github.com/simplestaking/tezedge" }
tezos_messages = { tag = "v0.5.0", git = "https://github.com/simplestaking/tezedge" }
